fixes address comments and better on mobile.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -140,6 +140,12 @@ header {
 
 }
 
+.mlhBanner{
+  position:absolute;
+  top:0;
+  right:0;
+ }
+
 .buttons {
 
   &.title {
@@ -504,11 +510,11 @@ footer {
 }
 
 #mydiv {
-  position: absolute;
-  z-index: 9;
-  background-color: #f1f1f1;
-  border: 1px solid #d3d3d3;
-  text-align: center;
+//  margin-top: 10vh;
+}
+
+.contact-link {
+  color: blue;
 }
 
 // .ima {
@@ -532,11 +538,29 @@ footer {
       display: initial !important;
     }
 }
-
-.mlh {
-  height: 100%;
+.spacing {
+  padding: 10px;
+}
+.center {
+  text-align: center;
+}
+.year {
+  display: flex;
+  padding: 15px;
+}
+.date {
+  padding-top: 10px;
+}
+.button-row {
+  padding-top: 20px;
 }
 
+.sign-up-button {
+  font-size: 3vh;
+}
+.banner {
+  display: flex;
+}
 .banner-svgs {
   display: flex;
   justify-content: center;
@@ -560,7 +584,11 @@ footer {
 }
 
 .padding {
-  padding-top: 200px;
+  padding-top: 25vh;
+}
+.logo {
+  max-width:100%;
+  max-height:100%;
 }
 
 .schedule-windows {
