--- a/assets/css/window.scss
+++ b/assets/css/window.scss
@@ -117,6 +117,7 @@
             #ffccb2 90%,
             white 100%,);
             opacity:100%;
+            cursor: zoom-in;
 
             .x1 {
                 content: '';
